# submittal_verifier_gc

./: .gitignore  README.md  app.py  prompt_manager.py  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
extraction/: pdf.py
graph/: nodes.py  schemas.py  workflow.py
prompts/: manager.py  prompts.json
