[project]
name = "submittal-verifier-gc"
version = "0.1.0"
description = "App and pipeline for submittal verification"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "openai",
  "pymupdf",
  "pydantic",
  "tenacity",
  "langchain",
  "langgraph",
  "langchain-openai",
]

[dependency-groups]
ui = ["streamlit"]
dev = ["ruff", "pytest", "mypy"]

[tool.uv]
default-groups = ["dev", "ui"]
